--- a/styles/style.css
+++ b/styles/style.css
@@ -1,76 +1,8 @@
 body {
   margin: 0;
-
   background: url('../img/background.jpg') no-repeat;
   background-size: cover;
   font-family: 'Helvetica Neue', Arial, sans-serif;
-}
-
-#memory-board {
-  background: #dddddd;
-  width: 800px;
-  height: 540px;
-  padding: 70px;
-  margin: 0px auto;
-  border-radius: 84px;
-  box-shadow: inset 0px 0px 20px -6px rgba(97, 89, 97, 1);
-}
-
-.card {
-  display: inline-block;
-  perspective: 300px;
-  transform-style: preserve-3d;
-
-  position: relative;
-}
-
-.card.turned {
-  pointer-events: none;
-}
-
-.card.turned .front {
-  transform: rotateY(0deg);
-}
-.card.turned .back {
-  transform: rotateY(180deg);
-}
-
-.card .back,
-.card .front {
-  width: 71px;
-  height: 71px;
-  margin: 10px;
-  padding: 20px;
-  font-size: 64px;
-
-  transition: transform 0.6s;
-}
-
-.card .back {
-  background-color: #456783;
-}
-
-.card .front {
-  position: absolute;
-  left: 0;
-  top: 0;
-  transform: rotateY(-180deg) translateZ(1px);
-  backface-visibility: hidden;
-}
-
-#score {
-  background-color: rgba(215, 44, 44, 0.8);
-  border-radius: 8px;
-  font-size: 30px;
-  font-family: Arial;
-  width: 200px;
-  padding: 20px;
-  padding-top: 0;
-  margin-left: 75%;
-}
-
-.container {
-  position: relative;
 }
 
 h1 {
@@ -94,4 +26,70 @@ p {
   font-weight: bolder;
   font-size: 20px;
   text-align: center;
+}
+
+.container {
+  position: relative;
+}
+
+#memory-board {
+  background: #dddddd;
+  width: 800px;
+  height: 540px;
+  padding: 70px;
+  margin: 0px auto;
+  border-radius: 84px;
+  box-shadow: inset 0px 0px 20px -6px rgba(97, 89, 97, 1);
+}
+
+.card {
+  display: inline-block;
+  perspective: 300px;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+.card.turned {
+  pointer-events: none;
+}
+
+.card.turned .front {
+  transform: rotateY(0deg);
+}
+.card.turned .back {
+  transform: rotateY(180deg);
+}
+
+.card .back,
+.card .front {
+  width: 71px;
+  height: 71px;
+  margin: 10px;
+  padding: 20px;
+  font-size: 64px;
+  transition: transform 0.6s;
+}
+
+.card .back {
+  background-color: #456783;
+}
+
+.card .front {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: rotateY(-180deg) translateZ(1px);
+  backface-visibility: hidden;
+}
+
+#score {
+  background-color: rgba(215, 44, 44, 0.8);
+  border-radius: 8px;
+  font-size: 30px;
+  font-family: Arial;
+  width: 200px;
+  padding: 20px;
+  padding-top: 0;
+  margin-left: 80%;
+  margin-bottom: 2%;
 }
